--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@ url: https://y7kim.github.io
 baseurl: /agency-jekyll-theme/
 
 # Site settings
-title: Awesome Title
+title: TOPJETSOFT 
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Olutayo Adesiyan 
   pic: 1
-  position: Lead Designer
+  position: CEO
   social:
     - title: twitter
       url: #
