--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 url: https://y7kim.github.io
-baseurl: /y7kim / agency-jekyll-theme/
+baseurl: /y7kim/agency-jekyll-theme/
 
 # Site settings
 title: TOPJETSOFT 
