--- a/_config.yml
+++ b/_config.yml
@@ -4,25 +4,26 @@ baseurl: '/biz/'
 # Site settings
 title: TOPJETSOFT 
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "We deliver stunning looking and mobile responsive website."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: OLUTAYO ADESIYAN
   pic: 1
-  position: Lead Designer
+  position: CEO
   social:
     - title: twitter
       url: #
     - title: facebook
       url: #
-    - title: stack-overflow
+    - title: instagram
       url: #
 
-- name: Larry Parker
+- name: KEHINDE FAWOLE
   pic: 2
-  position: Lead Marketer
+  position: Lead Marketer & Website Designer
+  
   social:
     - title: twitter
       url: #
