--- a/_config.yml
+++ b/_config.yml
@@ -29,18 +29,18 @@ people:
       url: #
     - title: facebook
       url: #
-    - title: linkedin
+    - title: instagram
       url: #
 
-- name: Diana Petersen
+- name: EVELYN OLUWAKEMI
   pic: 3
-  position: Lead Developer
+  position: Graphics Designer
   social:
     - title: twitter
       url: #
     - title: facebook
       url: #
-    - title: google-plus
+    - title: instagram
       url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
